--- a/admin-panel/views/edit.ejs
+++ b/admin-panel/views/edit.ejs
@@ -88,37 +88,39 @@
                 <div class="row">
                     <div class="col-md-7">
                         <div class="card">
-                            <form action="/addrecord" method="post" enctype="multipart/form-data" class="form-horizontal">
+                            <form action="/updaterec" method="post" enctype="multipart/form-data" class="form-horizontal">
                                 <div class="card-body">
                                     <h4 class="card-title">Personal Info</h4>
+                                    <input type="text" name="id" hidden value="<%=data.id%>" id="">
                                     <div class="form-group row">
                                         <label for="fname" class="col-sm-3 text-right control-label col-form-label">Profile Picture</label>
                                         <div class="col-sm-9">
-                                            <input type="file" class="form-control" id="fname" name="profile" placeholder="Image">
+                                            <input type="file" class="form-control" id="image" name="profile" placeholder="Image Here"><br>
+                                            <img src="<%=data.profile%>" width="70px" alt="">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="fname" class="col-sm-3 text-right control-label col-form-label">First Name</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name Here">
+                                            <input type="text" class="form-control" id="fname" name="fname" value="<%=data.fname%>" placeholder="First Name Here">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="lname" class="col-sm-3 text-right control-label col-form-label">Last Name</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name Here">
+                                            <input type="text" class="form-control" id="lname" name="lname" value="<%=data.lname%>" placeholder="Last Name Here">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="lname" class="col-sm-3 text-right control-label col-form-label">Email</label>
                                         <div class="col-sm-9">
-                                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email Here">
+                                            <input type="email" class="form-control" id="email" name="email" value="<%=data.email%>" placeholder="Enter Email Here">
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="lname" class="col-sm-3 text-right control-label col-form-label">Password</label>
                                         <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="lname" name="password" placeholder="Password Here">
+                                            <input type="password" class="form-control" id="lname" name="password" value="<%=data.password%>" placeholder="Password Here">
                                         </div><br><br>
                                     </div>
                                     <button type="submit" class="btn btn-primary">Submit</button>
