--- a/admin-panel/views/viewAdmin.ejs
+++ b/admin-panel/views/viewAdmin.ejs
@@ -40,19 +40,14 @@
         <!-- ============================================================== -->
         <!-- Topbar header - style you can find in pages.scss -->
         <!-- ============================================================== -->
-    
-
         <%-include("header")%>
-
         <!-- ============================================================== -->
         <!-- End Topbar header -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- Left Sidebar - style you can find in sidebar.scss  -->
         <!-- ============================================================== -->
-        
         <%-include("aside")%>
-
         <!-- ============================================================== -->
         <!-- End Left Sidebar - style you can find in sidebar.scss  -->
         <!-- ============================================================== -->
@@ -92,40 +87,38 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title m-b-0">Static Table</h5>
+                                <h5 class="card-title m-b-0">Admin Data Table</h5>
                             </div>
                             <table class="table">
                                   <thead>
-                                    <tr>
-                                      <th scope="col">#</th>
-                                      <th scope="col">First</th>
-                                      <th scope="col">Last</th>
-                                      <th scope="col">Handle</th>
+                                    <tr style="text-align: center;">
+                                      <th scope="col">Id</th>
+                                      <th scope="col">Profile_Pic</th>
+                                      <th scope="col">First Name</th>
+                                      <th scope="col">Last Name</th>
+                                      <th scope="col">Email</th>
+                                      <th scope="col">Password</th>
+                                      <th colspan="2" scope="col" style="text-align: center;">Actions</th>
                                     </tr>
                                   </thead>
+                                  <%data.map((e,i)=>{%>
                                   <tbody>
-                                    <tr>
-                                      <th scope="row">1</th>
-                                      <td>Mark</td>
-                                      <td>Otto</td>
-                                      <td>@mdo</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">2</th>
-                                      <td>Jacob</td>
-                                      <td>Thornton</td>
-                                      <td>@fat</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">3</th>
-                                      <td>Larry</td>
-                                      <td>the Bird</td>
-                                      <td>@twitter</td>
+                                    <tr style="text-align: center;">
+                                      <td><%=i+1%></td>
+                                      <td><img src="<%=e.profile%>" width="70px"  alt=""></td>
+                                      <td><%=e.fname%></td>
+                                      <td><%=e.lname%></td>
+                                      <td><%=e.email%></td>
+                                      <td><%=e.password%></td>
+                                      <td><a href="/editdata?id=<%=e.id %>" class="btn btn-sm btn-edit">Edit</a></td>
+                                      <td><a href="/deldata?id=<%=e.id%>" class="btn btn-sm btn-delete">Delete</a></td>
                                     </tr>
                                   </tbody>
+                                  <%})%>
+
                             </table>
                         </div>
-                     
+                        </div>
                     </div>
                 </div>
                 <!-- ============================================================== -->
