--- a/SEO_admin-panel/views/addAdmin.ejs
+++ b/SEO_admin-panel/views/addAdmin.ejs
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SeoDash Free Bootstrap Admin Template by Adminmart</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/seodashlogo.png" />
-  <link rel="stylesheet" href="../assets/css/styles.min.css" />
+   <link rel="stylesheet" href="../assets/css/styles.min.css">
 </head>
 
 <body>
+
+  <%- include("header") %>
+  <%- include("aside") %>
+
   <!--  Body Wrapper -->
   <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
     data-sidebar-position="fixed" data-header-position="fixed">
@@ -24,7 +28,7 @@
                   <img src="../assets/images/logos/logo-light.svg" alt="">
                 </a>
                 <p class="text-center">Your Social Campaigns</p>
-                <form>
+                <form action="/addrecord" method="POST" enctype="multipart/form-data">
                   <div class="mb-3">
                     <label for="profile" class="form-label">Profile Picture</label>
                     <input type="file" name="profile" class="form-control" id="profile" placeholder="Image">
