--- a/SEO_admin-panel/views/aside.ejs
+++ b/SEO_admin-panel/views/aside.ejs
@@ -2,7 +2,7 @@
     <!-- Sidebar scroll-->
     <div>
       <div class="brand-logo d-flex align-items-center justify-content-between">
-        <a href="./index.html" class="text-nowrap logo-img">
+        <a href="/dashboard" class="text-nowrap logo-img">
           <img src="../assets/images/logos/logo-light.svg" alt="" />
         </a>
         <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
@@ -29,7 +29,7 @@
          
         
           <li class="sidebar-item">
-            <a class="sidebar-link" href="/dashboard" aria-expanded="false">
+            <a class="sidebar-link" href="/addAdmin" aria-expanded="false">
               <span>
                 <iconify-icon icon="solar:user-plus-rounded-bold-duotone" class="fs-6"></iconify-icon>
               </span>
