--- a/SEO_admin-panel/views/edit.ejs
+++ b/SEO_admin-panel/views/edit.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SeoDash Free Bootstrap Admin Template by Adminmart</title>
   <link rel="shortcut icon" type="image/png" href="../assets/images/logos/seodashlogo.png" />
-  <link rel="stylesheet" href="../assets/css/styles.min.css" />
+  <link rel="stylesheet" href="../assets/css/styles.min.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                   <img src="../assets/images/logos/logo-light.svg" alt="">
                 </a>
                 <p class="text-center">Your Social Campaigns</p>
-                <form>
+                <form action="/updaterec" method="post" enctype="multipart/form-data">
                     <input type="text" name="id" hidden value="<%=data.id%>" id="">
                   <div class="mb-3">
                     <label for="profile" class="form-label">Profile Picture</label>
