Matrix_Admin-panel

--- a/Matrix_admin-panel/views/dashboard.ejs
+++ b/Matrix_admin-panel/views/dashboard.ejs
@@ -61,7 +61,12 @@
              <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h4 class="page-title">Dashboard</h4>
+                        <%if(locals.flash.success.length > 0 ){%>
+                        <div class="alert alert-primary" role="alert">
+                            <%=locals.flash.success%>
+                          </div>
+                          <%}%>
+                        <h4 class="page-title">  Dashboard</h4>
                         <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
