--- a/Matrix_admin-panel/views/verifypass.ejs
+++ b/Matrix_admin-panel/views/verifypass.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 
@@ -42,14 +43,14 @@
         <!-- ============================================================== -->
         <!-- Topbar header - style you can find in pages.scss -->
         <!-- ============================================================== -->
-        <%-include("header")%>
+       <%-include("header")%>
         <!-- ============================================================== -->
         <!-- End Topbar header -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- Left Sidebar - style you can find in sidebar.scss  -->
         <!-- ============================================================== -->
-        <%-include("aside")%>
+      <%-include("aside")%>
         <!-- ============================================================== -->
         <!-- End Left Sidebar - style you can find in sidebar.scss  -->
         <!-- ============================================================== -->
@@ -86,53 +87,45 @@
                 <!-- Start Page Content -->
                 <!-- ============================================================== -->
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-6">
                         <div class="card">
-                            <%if(locals.flash.success.length > 0 ){%>
-                                <div class="alert alert-primary" role="alert">
-                                    <%=locals.flash.success%>
-                                  </div>
-                                  <%}%>
-                            <form action="/addrecord" method="post" enctype="multipart/form-data" class="form-horizontal">
+                         <form class="form-horizontal" action="/verifypass" method="post">
                                 <div class="card-body">
-                                    <h4 class="card-title">Personal Info</h4>
+                                    <h4 class="card-title">Password Change</h4>
                                     <div class="form-group row">
-                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">Profile Picture</label>
+                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">OTP</label>
                                         <div class="col-sm-9">
-                                            <input type="file" class="form-control" id="fname" name="profile" placeholder="Image">
+                                            <input type="text" class="form-control"  name="otp" id="fname" placeholder="otp here">
                                         </div>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="fname" class="col-sm-3 text-right control-label col-form-label">First Name</label>
+                                        <label for="newPassword" class="col-sm-3 text-right control-label col-form-label">New Password</label>
                                         <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name Here">
+                                            <input type="text" class="form-control" name="newPassword"  id="lname" placeholder="New Password">
                                         </div>
                                     </div>
-                                    <div class="form-group row">
-                                        <label for="lname" class="col-sm-3 text-right control-label col-form-label">Last Name</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name Here">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="lname" class="col-sm-3 text-right control-label col-form-label">Email</label>
-                                        <div class="col-sm-9">
-                                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email Here">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="lname" class="col-sm-3 text-right control-label col-form-label">Password</label>
-                                        <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="lname" name="password" placeholder="Password Here">
-                                        </div><br><br>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
                                     
-                                
+                                    <div class="form-group row">
+                                        <label for="email1" class="col-sm-3 text-right control-label col-form-label">Confirm Password</label>
+                                        <div class="col-sm-9">
+                                            <input type="password" class="form-control" name="confirmPassword"  id="password" placeholder="Confirm Password">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="border-top">
+                                    <div class="card-body">
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
                                 </div>
                             </form>
                         </div>
+                        
+                       
                     </div>
+                   
+                </div>
+                <!-- editor -->
+                
                 <!-- ============================================================== -->
                 <!-- End PAge Content -->
                 <!-- ============================================================== -->
@@ -237,3 +230,7 @@
 </body>
 
 </html>
+
+
+
+  
