--- a/Matrix_admin-panel/views/viewAdmin.ejs
+++ b/Matrix_admin-panel/views/viewAdmin.ejs
@@ -61,6 +61,7 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
+                        
                         <h4 class="page-title">Tables</h4>
                         <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
@@ -116,7 +117,13 @@
                                   </tbody>
                                   <%})%>
 
+                                  <%if(locals.flash.success.length > 0 ){%>
+                                    <div class="alert alert-primary" role="alert">
+                                        <%=locals.flash.success%>
+                                      </div>
+                                      <%}%>
                             </table>
+
                         </div>
                         </div>
                     </div>
