--- a/Matrix_admin-panel/views/addCat.ejs
+++ b/Matrix_admin-panel/views/addCat.ejs
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="card">
-                            <form class="form-horizontal" action="/category/addCat" enctype="multipart/form-data" method="post">
+                            <form class="form-horizontal" action="/category/addCategory" enctype="multipart/form-data" method="post">
                                 <div class="card-body">
                                     <h4 class="card-title">Information</h4>
                                     <div class="form-group row">
