--- a/Matrix_admin-panel/views/aside.ejs
+++ b/Matrix_admin-panel/views/aside.ejs
@@ -41,7 +41,7 @@
                                     class="mdi mdi-note-outline"></i><span class="hide-menu"> Add SubCategory
                                 </span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                                href="/subcategory/viewsubCat" aria-expanded="false"><i
+                                href="/subcategory/viewsubCategory" aria-expanded="false"><i
                                     class="mdi mdi-border-inside"></i><span class="hide-menu">View
                                     SubCategory</span></a></li>
                     </ul>
