--- a/Matrix_admin-panel/views/viewCategory.ejs
+++ b/Matrix_admin-panel/views/viewCategory.ejs
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
     <title>Matrix Template - The Ultimate Multipurpose admin template</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/extra-libs/multicheck/multicheck.css">
-    <link href="assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
-    <link href="dist/css/style.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/extra-libs/multicheck/multicheck.css">
+    <link href="/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="/dist/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -99,17 +99,20 @@
                                       <th colspan="2" scope="col" style="text-align: center;">Actions</th>
                                     </tr>
                                   </thead>
-                                  <%data.map((e,i)=>{%>
                                   <tbody>
+                                  <%data.map((el,i)=>{%>
+                                   
+
                                     <tr style="text-align: center;">
                                       <td><%=i+1%></td>
-                                      <td><%=e.CatName%></td>
-                                      <td><img src="<%=e.image%>" width="70px"  alt=""></td>
-                                      <td><a href="/editdata?id=<%=e.id %>" class="btn btn-sm btn-edit">Edit</a></td>
-                                      <td><a href="/deldata?id=<%=e.id%>" class="btn btn-sm btn-delete">Delete</a></td>
+                                      <td><%=el.catName%></td>
+                                      <td><img src="/<%=el.image%>" width="70px"  alt=""></td>
+                                      <td><a href="" class="btn btn-sm btn-edit">Edit</a></td>
+                                      <td><a href="" class="btn btn-sm btn-delete">Delete</a></td>
                                     </tr>
-                                  </tbody>
                                   <%})%>
+
+                                  </tbody>
 
                                   <%if(locals.flash.success.length > 0 ){%>
                                     <div class="alert alert-primary" role="alert">
@@ -156,23 +159,23 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="assets/libs/popper.js/dist/umd/popper.min.js"></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/assets/libs/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="dist/js/waves.js"></script>
+    <script src="/dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="dist/js/sidebarmenu.js"></script>
+    <script src="/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="dist/js/custom.min.js"></script>
+    <script src="/dist/js/custom.min.js"></script>
     <!-- this page js -->
-    <script src="assets/extra-libs/multicheck/datatable-checkbox-init.js"></script>
-    <script src="assets/extra-libs/multicheck/jquery.multicheck.js"></script>
-    <script src="assets/extra-libs/DataTables/datatables.min.js"></script>
+    <script src="/assets/extra-libs/multicheck/datatable-checkbox-init.js"></script>
+    <script src="/assets/extra-libs/multicheck/jquery.multicheck.js"></script>
+    <script src="/assets/extra-libs/DataTables/datatables.min.js"></script>
     <script>
         /****************************************
          *       Basic Table                   *
